src/style.css
/* default */
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
:root {
  --slate: #151619;
  --slate-900: #1d1f22;
  --slate-800: #2b2d31;
  --slate-700: #35393f;
  --slate-600: #5a6069;
  --slate-500: #7c8187;
  --slate-400: #c1c4cb;
  --slate-300: #e4e4e4;
  --slate-200: #f5f5f5;

  --white: #ffffff;

  /* (orange and light orange) */
  --orange: #e46643;
  --orange-light: #f39765;

  /* (font sizing and weight) */
  --roboto-regular-15: 1.5rem;
  --roboto-regular-14: 1.4rem;
  --roboto-regular-char-spacing: 0.2rem;
  --roboto-light: 1.3rem;

  --roboto-slab-regular: 1.4rem;
  --roboto-line-spacing: 2.4rem;

  --roboto-mono-regular: 1.4rem;
  --font-roboto-moni: "Roboto Mono", sans-serif;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: inherit;
}
html {
  font-size: 62.5%; /* 62.5% of 16px = 10px */
}
.app {
  position: relative;
}
.hidden {
  display: none;
}
body {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-size: var(--roboto-regular-14);
}
h1,
h3,
h4,
h5,
h6 {
  font-weight: bold;
}
h1 {
  font-size: 3.2rem;
}
h2 {
  font-weight: 300;
  font-size: 2.8rem;
}
h3 {
  font-size: 2.4rem;
}
h4 {
  font-size: 2rem;
}
h5 {
  font-size: 16rem;
}
h6 {
  font-size: 14rem;
}
button {
  border: none;
  outline: none;
}

/* header style css */
header {
  background-color: var(--slate-800);
  display: flex;
  align-items: center;
  justify-content: space-between;

  gap: 1.6rem;
}

header > div:last-child {
  width: 100%;
  display: flex;
  padding-right: 0.4rem;
  align-items: center;
}
.nameDocument {
  border: none;
  background-color: inherit;
  color: var(--slate-200);
}
.nameDocument:focus {
  border: none;
  outline: none;
}
.nameDiv {
  display: flex;
  align-items: center;
  gap: 1.5rem;
  flex-grow: 1;
  width: 100%;
  color: var(--slate-200);
}
.menuBtn {
  padding: 1.2rem 1.2rem;
  width: 5.2rem;
  height: 5.2rem;
  background-color: var(--slate-700);
}
.menuBtn > svg {
  width: 2.4rem;
}
.saveDeleteDiv {
  display: flex;
  align-items: center;
  justify-content: end;
  gap: 0.5rem;
}
.saveDeleteDiv button:first-child,
.saveDeleteDiv button:last-child,
.menuBtn {
  display: flex;
  justify-content: center;
  align-items: center;
}
.saveDeleteDiv button:first-child {
  padding: 1rem;
  background-color: var(--slate-800);
}
.saveDeleteDiv button:last-child {
  padding: 1rem;
  background-color: var(--orange);
  border-radius: 0.2rem;
}
/* main section */
main {
  position: absolute;
  top: 0;
  transform: translateX(0px);
  width: 100%;
  height: 100vh;
  transition: transform ease 0.3s;
}
.container {
  display: flex;
  flex-direction: column;
}
.markDownPreview {
  background-color: var(--slate-300);
  padding: 1.4rem 1rem;

  display: flex;
  align-items: center;
  justify-content: space-between;
}
.markDownPreview h1 {
  color: var(--slate-600);
  font-size: var(--roboto-regular-15);
  letter-spacing: var(--roboto-regular-char-spacing);
}
.markDownInput {
  outline: none;
  border: none;
  width: 100%;
  height: 100vh;
  background-color: var(--slate-400);
}

/* side bar */

article {
  position: fixed;
  transition: transform ease 0.3s;
  top: 0;
  transform: translateX(-250px);
  overflow-x: hidden;
  background-color: var(--slate-900);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 2rem 2rem;
  height: 100vh;
  width: 25rem;
}
article > h1 {
  font-size: 1.8rem;
  color: var(--slate-400);
  letter-spacing: var(--roboto-regular-char-spacing);
  margin-top: 2rem;
}
.newDocumentBtn {
  margin: 2rem 0rem;
  padding: 1rem;
  color: var(--slate-200);
  font-size: var(--roboto-regular-15);
  font-weight: 500;
  letter-spacing: var(--roboto-regular-char-spacing);
  border-radius: 0.2rem;
  background-color: var(--orange);
  transition: all ease 0.3s;
}
.newDocumentBtn:hover {
  background-color: var(--orange-light);
  cursor: pointer;
}
.loadMyDocuments {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  flex-grow: 2;
}
.loadMyDocuments div:hover {
  cursor: pointer;
}
.loadMyDocCssMainDiv {
  display: flex;
  align-items: center;
  gap: 2rem;
}
.loadMyDocCssMainDiv > div:first-child {
  display: flex;
  align-items: center;
  justify-content: center;
}
.loadMyDocCssMainDiv > div:last-child {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
}
.loadMyDocCssMainDiv > div:last-child > div:first-child {
  color: var(--slate-500);
  letter-spacing: var(--roboto-regular-char-spacing);
}
.loadMyDocCssMainDiv > div:last-child > div:last-child {
  color: var(--slate-200);
}
.darkLightModeDiv {
  display: flex;
  align-items: center;
  gap: 1rem;
}
.darkLightModeDiv > svg:last-child > path {
  fill: var(--slate-200);
}
.darkLightBtn {
  width: 4.4rem;
  height: 2.4rem;

  border-radius: 1.5rem;
  background-color: var(--slate-600);

  position: relative;
}
.darkLightBtn > span {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);

  width: 1.6rem;
  height: 1.6rem;
  border-radius: 50%;
  background-color: var(--slate-200);
  transition: transform ease 0.3s;
}
/* Modal styles */
.modal {
  display: none;
  position: fixed;
  z-index: 1000;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(5px);
}

.modal-content {
  background-color: #fff;
  margin: 50% auto;
  padding: 1.6rem;
  border: 1px solid #888;
  width: 90%;
  max-width: 50rem;
  border-radius: 0.4rem;
  text-align: left;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.modal-content > p {
  line-height: 1.5;
}
.modal-footer {
  display: flex;
  justify-content: space-around;
}

.btn {
  background-color: var(--orange);
  padding: 10px 20px;
  cursor: pointer;
  width: 100%;
  border-radius: 0.4rem;
  color: var(--slate-200);
}

